<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.ProfileActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:logo="@mipmap/ic_app_logo"
        android:background="@color/colorPrimaryDark"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/app_title"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <RelativeLayout
        android:layout_below="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display"
        android:layout_margin="16dp"


        android:layout_centerHorizontal="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="false"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/greenDark"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/todo" />


                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="@string/create_profile"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:clickable="true"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/clipart"
                        android:contentDescription="@string/todo"
                        android:focusable="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="1dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/set_profile_photo"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText.White.Hint">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:id="@+id/fName"
                            android:hint="@string/first_name"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/grey_10"
                            android:theme="@style/EditText.White" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText.White.Hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:hint="@string/surname"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/grey_10"
                            android:theme="@style/EditText.White" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText.White.Hint">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:id="@+id/nationalID"
                            android:hint="@string/national_id_number"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/grey_10"
                            android:theme="@style/EditText.White" />
                    </com.google.android.material.textfield.TextInputLayout>




                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditText.White.Hint">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:id="@+id/phoneNumber"
                            android:hint="@string/phone_number"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/grey_10"
                            android:theme="@style/EditText.White" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/county_spinner"
                            android:layout_width="1dp"
                            android:layout_height="1dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="60dp"
                            android:background="#000000"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:spinnerMode="dialog"
                            android:visibility="gone" />

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/EditText.White.Hint"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_manufacturer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Select your County"
                                android:inputType="textEmailSubject"
                                android:maxLength="55"
                                />
                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/spinner_subCounty"
                            android:layout_width="1dp"
                            android:layout_height="1dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="60dp"
                            android:background="#000000"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:spinnerMode="dialog"
                            android:visibility="gone" />

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/EditText.White.Hint"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Select Your Sub-County"
                                android:inputType="textEmailSubject"
                                android:maxLength="55"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>



                    <View
                        android:layout_width="0dp"
                        android:layout_height="10dp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <Button

                            android:layout_margin="50dp"
                            android:background="@drawable/layout_special"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:id="@+id/doneBtn"
                            android:layout_width="150dp"
                            android:clickable="true"
                            android:layout_gravity="center_horizontal"
                            android:textAllCaps="false"
                            android:layout_height="wrap_content"
                            android:text="@string/submit"

                            android:focusable="true" />
                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:theme="@style/AppTheme"
                            android:visibility="gone"
                            />


                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
    <?xml version="1.0" encoding="utf-8"?>
